--- a/angular/src/app/component/home/home.component.html
+++ b/angular/src/app/component/home/home.component.html
@@ -1,19 +1,27 @@
-<!-- <div class=" text-center ">
-  <h1 class="card-title">Welcome to MovieApp!</h1>
-    <div class="card shadow-lg">
-      <img 
-        src="https://c4.wallpaperflare.com/wallpaper/435/850/519/harry-potter-harry-potter-characters-poster-wallpaper-preview.jpg" 
-        class="card-img-top img-fluid blur-image" 
-        alt="Welcome" 
-      />
-      <div class="card-body">
-       
-        <p *ngIf="!apiService.isLoggedIn()" class="card-text">Please login or register to continue.</p>
-        <div *ngIf="!apiService.isLoggedIn()" class="d-flex justify-content-center gap-3">
-          <a href="/login" class="btn btn-primary">Login</a>
-          <a href="/register" class="btn btn-success">Register</a>
-        </div>
+<div class="home-container">
+  <div class="content">
+    <div class="task-list-container">
+      <div class="add-task">
+        <input [(ngModel)]="newTaskTitle" placeholder="Add new task..." (keyup.enter)="addTask()">
+        <button (click)="addTask()">Add</button>
+      </div>
+      
+      <div class="task-list">
+        <app-task-item 
+          *ngFor="let task of todos" 
+          [task]="task" 
+          (selected)="selectTask($event)">
+        </app-task-item>
       </div>
     </div>
+    
+    <div class="task-details-container" *ngIf="selectedTask">
+      <app-task-details 
+        [task]="selectedTask" 
+        (close)="closeDetails()"
+        (saved)="loadTodos()"
+        (deleted)="onTaskDeleted($event)">
+      </app-task-details>
+    </div>
   </div>
-   -->
+</div>
