--- a/angular/src/app/component/not-found/not-found.component.html
+++ b/angular/src/app/component/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 <div class="text-center mt-5">
     <h1 class="display-4 text-danger">404 - Not Found</h1>
-    <p class="lead">Sorry, we couldn't find any movies matching your search.</p>
-    <a routerLink="/movies" class="btn btn-primary mt-3">Back to Movies</a>
+    <p class="lead">Sorry, we couldn't find any todo your search.</p>
+    <a routerLink="/home" class="btn btn-primary mt-3">Back to toDa</a>
   </div>
