--- a/angular/src/app/component/task-details/task-details.component.html
+++ b/angular/src/app/component/task-details/task-details.component.html
@@ -58,9 +58,8 @@
     </div>
   </div>
 
-  <!-- Actions -->
   <div class="mt-4 d-flex justify-content-end gap-2">
     <button class="btn btn-primary" (click)="saveChanges()">Save Changes</button>
-    <button class="btn btn-danger" (click)="deleteTask()">Delete Task</button>
+    <button class="btn btn-danger" (click)="confirmDelete()">Delete Task</button>
   </div>
 </div>
